# eposforge

./: .gitattributes  .gitignore  .mcp.json  .mcp.json.example  .mlc-config.json  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MACHINE_AUTHORIZATION.md  NOTICE  README.md  SPEC.md  epos-machine-request.json  eposforge.code-workspace  gemini-access-check.ps1  package.json  tmp-cognee-idea.md
.claude/: settings.json
.eposforge/: README.md  SPEC.md  _index.json
.gemini/: settings.json.example
.github/: copilot-instructions.md
00-vision/: 00-vision.md  01-glossary.md  01-glossary.ttl  01-ontology.ttl  02-roles-ownership.md
01-architecture/: 00-adapter-pattern.md  01-reference-architecture.md  03-autonomy-modes.md  04-stabilization-and-kernels.md
02-roadmap/: adoption-strategy.md  platform-factory-phases.md  product-factory-phases.md
03-research/: README.md  adoption-strategies.md  dev-products.md  landscape.md  secrets-key-management.md  spec-graph.md
04-standards/: README.md
backlog/: backlog-archive-index.md  backlog.md  (+3 more)
instance/installed/06-spec-graph/cognee/sync/: .cognee-state.db  README.md  pyproject.toml
instance/installed/06-spec-graph/cognee/sync/src/cognee_sync/: __init__.py  cli.py  client.py  config.py  state.py  sync.py
instance/installed/06-spec-graph/cognee/sync/tests/: conftest.py  test_addfile.py  test_cli_budget_accounting.py  test_deletefile.py  test_ontology.py  test_smoke.py  test_sync.py  test_updatefile.py
instance/installed/06-spec-graph/cognee/sync/tests/fixtures/: phase4.ttl
(+430 files in other folders)
